--- a/client/package.json
+++ b/client/package.json
@@ -3,24 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.21.4",
-    "concurrently": "^7.0.0",
-    "cors": "^2.8.5",
-    "js-file-download": "^0.4.12",
-    "npm-check": "^5.9.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-multi-carousel": "^2.6.2",
-    "react-router-dom": "^6.2.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-multi-carousel": "^2.8.5",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.0",
-    "serverless-http": "^2.7.0",
-    "web-vitals": "^2.1.3"
+    "serverless-http": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,12 +22,14 @@
     "express": "npm start --prefix ../server",
     "dev": "concurrently \"npm run start\" \"npm run express\"",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --config ./eslint.config.mjs .",
+    "lint:fix": "eslint --fix ."
+
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -47,5 +43,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.1",
+    "globals": "^15.11.0",
+    "prettier": "3.3.3"
   }
 }
