--- a/client/package.json
+++ b/client/package.json
@@ -14,23 +14,19 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.0",
+    "serve": "^14.2.3",
     "serverless-http": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build",
     "express": "npm start --prefix ../server",
     "dev": "concurrently \"npm run start\" \"npm run express\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --config ./eslint.config.mjs .",
     "lint:fix": "eslint --fix ."
-
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
   },
   "browserslist": {
     "production": [
@@ -46,7 +42,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
-    "eslint": "^8.57.1",
+    "@types/prettier": "^3.0.0",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.1",
